# cuda_test

./: CMakeLists.txt  FacePatchProc.cu  FacePatchProc.h  main.cu  simple_pre_process.cu
data/: landmarks.txt
